// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GammaButton/> Shallow render of primary raised <GammaButton/> 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GammaButton
    onClick={[Function]}
    primary={true}
    raised={true}
    text="This is a button"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "This is a button",
      "color": "primary",
      "disabled": undefined,
      "onClick": [Function],
      "type": "button",
      "variant": "contained",
    },
    "ref": null,
    "rendered": "This is a button",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "This is a button",
        "color": "primary",
        "disabled": undefined,
        "onClick": [Function],
        "type": "button",
        "variant": "contained",
      },
      "ref": null,
      "rendered": "This is a button",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<GammaButton/> Shallow render of raised submit <GammaButton/> 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GammaButton
    raised={true}
    submit={true}
    text="This is a button"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "This is a button",
      "color": "default",
      "disabled": undefined,
      "onClick": undefined,
      "type": "submit",
      "variant": "contained",
    },
    "ref": null,
    "rendered": "This is a button",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "This is a button",
        "color": "default",
        "disabled": undefined,
        "onClick": undefined,
        "type": "submit",
        "variant": "contained",
      },
      "ref": null,
      "rendered": "This is a button",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<GammaButton/> Shallow render of secondary disabled <GammaButton/> 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GammaButton
    disabled={true}
    onClick={[Function]}
    secondary={true}
    text="This is a button"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "This is a button",
      "color": "secondary",
      "disabled": true,
      "onClick": [Function],
      "type": "button",
      "variant": "flat",
    },
    "ref": null,
    "rendered": "This is a button",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "This is a button",
        "color": "secondary",
        "disabled": true,
        "onClick": [Function],
        "type": "button",
        "variant": "flat",
      },
      "ref": null,
      "rendered": "This is a button",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
